2005-04-09  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/z3950.rb:

	Added (not complete though).

	* data/alexandria/glade/preferences_dialog.glade:

	Introduced an expert mode which shows Add and Remove providers buttons.

	* lib/alexandria/book_providers.rb:

	Introduced the concept of abstract providers (not complete though).
	
	* lib/alexandria/ui/preferences_dialog.rb:

	Introduced an Add Provider dialog (not complete though).

2005-04-08  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS,
	  lib/alexandria.rb:

	Added Ligia.

2005-04-07  Claudio Belotti  <bel8@lilik.it>

	* tests/test_provider.rb:

	Added a test for the Internet Bookshop Italia provider.

2005-04-07  Pascal Terjan  <pterjan@linuxfr.org>

	* lib/alexandria/book_providers/proxis.rb:
	
	Fix previous fix
	
	* tests/test_providers.rb:

	Test that the result of ISBN search has the right ISBN
	
2005-04-06  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS,
	  lib/alexandria.rb:

	Added Claudio.

2005-04-06  Claudio Belotti  <bel8@lilik.it>
	
	* lib/alexandria/book_providers/ibs_it.rb:

	Added (provided to the Internet Bookshop Italia).

	* lib/alexandria/book_providers.rb,
	  schemas/alexandria.schemas:

	Follow latest change.

2005-04-05  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/book_properties_dialog.glade,
	  data/alexandria/glade/new_book_dialog.glade,
	  data/alexandria/glade/preferences_dialog.glade,
	  lib/alexandria/ui/book_properties_dialog.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb,
	  lib/alexandria/ui/preferences_dialog.rb:

	Added an Help button in the Add Book, Add Book Manual, Book Properties and
	Preferences dialogs that is connected to the Docbook manual.

2005-04-04  Laurent Sansonetti  <lrz@gnome.org>

	* doc/*:

	- Moved the docbook file and the figures in data/gnome/help/alexandria/C ;
	- Moved the OMF file in data/omf ;
	- This directory is now empty.
